--- a/cypress/.github/workflows/ci.yml
+++ b/cypress/.github/workflows/ci.yml
@@ -1,10 +1,16 @@
 name: End-to-end test
-on: push
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04git 
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Cypress run
         uses: cypress-io/github-action@v6
