--- a/cypress/.github/workflows/ci.yml
+++ b/cypress/.github/workflows/ci.yml
@@ -1,16 +1,15 @@
-name: End-to-end test
+name: Cypress Tests
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with:
+          build: npm run build
+          start: npm start
